--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Cineflix"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activities.MovieDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.Activities.MainActivity"
             android:exported="true">
             <intent-filter>
@@ -25,6 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
     </application>
 
 </manifest>
