--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,9 @@
         android:theme="@style/Theme.Cineflix"
         tools:targetApi="31">
         <activity
+            android:name=".View.Activities.TvDetailsActivity"
+            android:exported="false" />
+        <activity
             android:name=".View.Activities.MoviePlayerActivity"
             android:exported="false" />
         <activity
